# Steel_Defect_Detection

./: .gitignore  .pre-commit-config.yaml  Steel_Defect_Detection.ipynb  data_generator.py  dvc.yaml  flask.py  flask_run.py  linting.md  losses.py  main.py  models.py  preprocessing.py  pyproject.toml  readme.md  requirements.txt  run.py  split_data.py  train_classifier.py  train_linknet.py  train_unet.py
.dvc/: config
project/: data.dvc  experiments.dvc  flask_run.py  main.py  weights.dvc
project/data/: test.dvc  train.dvc
project/data/processed_data/: .gitignore
project/experiments/: clf_metrics.json  params.json
project/src/: evaluate_classifier.py  evaluate_segmentation.py  load_test_data.py  load_train_data.py  load_weights.py  models.py  train_classifier.py  train_linknet.py
project/src/metrics/: losses.py
project/src/preprocessing/: data_generator.py  preprocessing.py  split_data.py
project/templates/: submit.html
project/weights/: .gitignore
src/: load_train_data.py  models.py  train_classifier.py  train_linknet.py
src/metrics/: losses.py
src/preprocessing/: data_generator.py  preprocessing.py  split_data.py
templates/: submit.html
