[tool.poetry]
name = "steel-defect-detection"
version = "0.1.1"
description = ""
authors = ["Pavel"]
readme = "README.md"
packages = [{include = "project"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "~1.23.4"
tensorflow = "2.7.0"
keras = "2.7.0"
opencv-python = "~4.6.0.66"
#segmentation-models = {git = "https://github.com/qubvel/segmentation_models"}
keras-applications = "1.0.8"
image-classifiers = "1.0.0"
efficientnet = "1.0.0"
flask = "~2.2.2"
flask-wtf = "1.0.1"
werkzeug = "~2.2.2"
gdown = "~4.5.3"

[tool.poetry.group.dev.dependencies]
numpy = "~1.23.4"
tensorflow = "2.7.0"
keras = "2.7.0"
albumentations = "~1.3.0"
pandas = "~1.5.1"
opencv-python = "~4.6.0.66"
#segmentation-models = {git = "https://github.com/qubvel/segmentation_models"}
keras-applications = "1.0.8"
image-classifiers = "1.0.0"
efficientnet = "1.0.0"
flask = "~2.2.2"
flask-wtf = "1.0.1"
werkzeug = "~2.2.2"
gdown = "~4.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
