[tool.poetry]
name = "steel-defect-detection"
version = "0.1.1"
description = ""
authors = ["Pavel"]
readme = "README.md"
packages = [{include = "project"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "~1.23.4"
tensorflow = "2.7.0"
keras = "2.7.0"
opencv-python = "~4.6.0.66"
segmentation-models = {git = "https://github.com/qubvel/segmentation_models"}
keras-applications = "1.0.8"
image-classifiers = "1.0.0"
efficientnet = "1.0.0"
flask = "~2.2.2"
flask-wtf = "1.0.1"
werkzeug = "~2.2.2"
gdown = "~4.5.3"

[tool.poetry.group.dev.dependencies]
numpy = "~1.23.4"
tensorflow = "2.7.0"
keras = "2.7.0"
albumentations = "~1.3.0"
pandas = "~1.5.1"
opencv-python = "~4.6.0.66"
segmentation-models = {git = "https://github.com/qubvel/segmentation_models"}
keras-applications = "1.0.8"
image-classifiers = "1.0.0"
efficientnet = "1.0.0"
flask = "~2.2.2"
flask-wtf = "1.0.1"
werkzeug = "~2.2.2"
gdown = "~4.5.3"
isort = "^5.10.1"
black = "^22.10.0"
flake8 = "5.0.2"
flake8-comprehensions = "^3.10.1"
flake8-implicit-str-concat = "^0.3.0"
flake8-literal = "^1.3.0"
flake8-multiline-containers = "^0.0.19"
flake8-return = "^1.2.0"
flake8-broken-line = "^0.6.0"
flake8-builtins = "^2.0.1"
flake8-functions-names = "^0.4.0"
pep8-naming = "^0.13.2"
flake8-expression-complexity = "^0.0.11"
flake8-functions = "^0.0.7"
flake8-length = "^0.3.1"
flake8-comments = "^0.1.2"
flake8-eradicate = "^1.4.0"
flake8-docstrings = "^1.6.0"
flake8-docstring-checker = "^1.1"
flake8-annotations = "^2.9.1"
flake8-fastapi = "^0.7.0"
pandas-vet = "^0.2.3"
pre-commit = "^2.9.3"

[tool.flake8]
max-line-length = 94
literal-inline-quotes = "double"
ignore = ['CF001', 'VNE002', 'N812', 'ANN101', 'D107', "ANN204", 'DC104']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
